# kira

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  MEMORY_HEAL_README.md  README.md  debug_formatter.py  docker-compose.yml  install.ps1  install.sh  memory-heal.sh  pyproject.toml
docker/: nginx.conf
docs/: architecture-v2.md  architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  boards.ts  cards.ts  client.ts  gitlab.ts  jira.ts  tasks.ts  workers.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/shared/: SearchPalette.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  SlideOver.tsx  Toast.tsx
frontend/src/features/agent/: AgentStatus.tsx
frontend/src/features/auth/: Login.tsx  UserProfile.tsx
frontend/src/features/board/: Board.tsx  BoardHeader.tsx  BoardMembers.tsx  Card.tsx  CardDetail.tsx  Column.tsx  ColumnConfig.tsx  GenerateBoardModal.tsx  GenerateCardsModal.tsx  NewCard.tsx  PlanProgressBanner.tsx  TaskStatusBadge.tsx  WorkerStatus.tsx
frontend/src/features/gitlab/: GitLabBadge.tsx  GitLabProjectPicker.tsx  GitLabSettings.tsx
frontend/src/features/jira/: JiraBadge.tsx  JiraImport.tsx  JiraSettings.tsx
frontend/src/features/workspace/: WorkspaceSettings.tsx
frontend/src/hooks/: useAgentConnection.ts  useBoard.ts  useKeyboard.ts  useSSE.ts
frontend/src/stores/: agentStore.ts  authStore.ts  boardStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: board.ts  events.ts  gitlab.ts  jira.ts  task.ts  user.ts  worker.ts
scripts/: docker-start.sh  docker-stop.sh  restart.sh  smoke_test.py  start-worker.sh  start.sh  stop-worker.sh  stop.sh  test_board_create.py
src/kira/: __init__.py  __main__.py
src/kira/agent/: cli.py  daemon.py  service.py
src/kira/agents/: __init__.py  classifier.py  models.py  registry.py  spawner.py
src/kira/cli/: app.py  formatter.py  output.py  repl.py
src/kira/cli/commands/: config.py  logs.py  memory.py  skills.py
src/kira/context/: __init__.py  analyzer.py  manager.py  models.py  smart.py
src/kira/core/: __init__.py  agent.py  client.py  config.py  defaults.py  models.py  personality.py  session.py  verifier.py
src/kira/correction/: __init__.py  analyzer.py  loop.py  models.py  reviser.py
src/kira/git/: __init__.py  assistant.py
src/kira/integrations/: __init__.py
src/kira/integrations/gitlab/: __init__.py  client.py  models.py
src/kira/integrations/jira/: __init__.py  client.py  formatter.py  models.py
src/kira/logs/: __init__.py  models.py  store.py
src/kira/memory/: __init__.py  execution.py  extractor.py  failures.py  maintenance.py  models.py  project_store.py  relevance.py  store.py
src/kira/rules/: __init__.py  manager.py  models.py
src/kira/rules/builtin/: coding.yaml  refactoring.yaml  ui-design.yaml
src/kira/skills/: manager.py
src/kira/skills/builtin/: architect.yaml  coder.yaml  debugger.yaml  documenter.yaml  researcher.yaml  reviewer.yaml
src/kira/thinking/: __init__.py  executor.py  models.py  planner.py  reasoning.py
src/kira/tools/: __init__.py  base.py  file_ops.py  models.py  shell.py
src/kira/web/: __init__.py  app.py  config.py  deps.py
src/kira/web/agent_install/: router.py
src/kira/web/auth/: __init__.py  models.py  provider.py  router.py  service.py
src/kira/web/automation/: __init__.py  prompt.py  trigger.py
src/kira/web/boards/: __init__.py  models.py  router.py  service.py
src/kira/web/cards/: __init__.py  models.py  router.py  service.py
src/kira/web/db/: __init__.py  database.py  schema.sql  seed.py
src/kira/web/events/: __init__.py  manager.py  models.py  router.py
src/kira/web/gitlab/: __init__.py  models.py  router.py
src/kira/web/jira/: __init__.py  models.py  (+1 more)
src/kira/worker/: __init__.py  cli.py  client.py  config.py  runner.py  workspace.py
src/kira/workflows/: __init__.py  coding.py  detector.py  models.py  orchestrator.py
tests/: test_board_generate.py  test_card_locking.py  test_web_gitlab.py  test_web_workers.py
tests/agent/: test_daemon.py  test_service.py
tests/worker/: test_client.py  test_config.py  test_executors.py  test_gitlab_executor.py  test_planner_executor.py  test_runner.py  test_workspace.py
(+16 files in other folders)
