[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kira"
version = "0.0.12-alpha1"
description = "Agentic CLI powered by kiro-cli with persistent memory and skills"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "MaratO", email = "moganes@gmail.com" }
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
kira = "kira.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kira"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
