[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kira"
version = "0.2.2"
description = "Agentic CLI powered by kiro-cli with persistent memory, skills, and coding rules"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cli", "ai", "agent", "llm", "coding", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
authors = [
    { name = "MaratO", email = "moganes@gmail.com" }
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
kira = "kira.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kira"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

# Include YAML files for skills and rules
[tool.hatch.build.targets.wheel.force-include]
"src/kira/skills/builtin" = "kira/skills/builtin"
"src/kira/rules/builtin" = "kira/rules/builtin"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
